# Very

./: .coverage  .gitignore  AGENTS.md  DEV.md  LICENCE  LICENSE  README.md  agent_test.bat  go.mod  go.sum  main.go  main.py  pyproject.toml  vindex.toml
apis/: __init__.py  _error.py  _event.py  build.py  pkg.py  scaffold.py  search.py  tool.py  types.py  vindex.py  vstd.py
cmds/: __init__.py  _utils.py  add.py  base.py  cmd_add.py  cmd_build.py  cmd_del.py  cmd_exe.py  cmd_good.py  cmd_init.py  cmd_install.py  cmd_list.py  cmd_prune.py  cmd_run.py  cmd_search.py  cmd_std.py  cmd_tool.py  cmd_update.py  cmd_what.py  installer.py  utils.py
cmds/cmd_tool/: __init__.py  delete.py  install.py  prune.py  search.py  update.py
cmds/share/: __init__.py  log.py  search.py  util.py
cmds/tool/: __init__.py  delete.py  install.py  search.py  update.py
docs/: vindex-toml.md
internal/api/: build.go  error.go  pkg.go  scaffold.go  search.go  tool.go  types.go  vindex.go  vstd.go
internal/cmd/: add.go  build.go  del.go  exe.go  good.go  init_cmd.go  log.go  (+10 more)
tests/: conftest.py  test_base.py  test_cli.py  test_cmd_add.py  test_cmd_build.py  test_cmd_del.py  test_cmd_exe.py  test_cmd_good.py  test_cmd_init.py  test_cmd_install.py  test_cmd_list.py  test_cmd_prune.py  test_cmd_run.py  test_cmd_search.py  test_cmd_tool.py  test_cmd_update.py  test_collect.py  test_info.py  test_installer.py  test_main.py  test_packaging.py  test_parse.py  test_utils.py
very/: .gitignore  README.md  build.sh
very-vix/: README.md  build.sh
xpm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+22 files in other folders)
