[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
packages = ["cmds"]

[project]
name = "very"
version = "0.6.3"
description = "Vix 项目管理与构建工具"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gitpython>=3.1.46",
    "rich>=15.0.0",
    "tqdm>=4.67.3",
]

# 中国大陆用户可取消以下注释以使用清华镜像源：
# [[tool.uv.index]]
# url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
# default = true

[project.scripts]
very = "main:main"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.12",
    "pytest>=8.3.0",
]

[tool.black]
target-version = ["py313"]
