[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["cmds*", "apis*"]
namespaces = false

[[tool.uv.index]]
url = "https://pypi.org/simple/"
default = true

[project]
name = "very"
version = "0.35.0"
description = "Vix 项目管理与构建工具"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
    "tqdm>=4.67.3",
    "tomli-w>=1.2.0",
    "typer>=0.15",
    "click>=8.1",
    "pyrsult==0.4.3",
]



[project.scripts]
very = "main:entry"

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.12",
    "pytest>=8.3.0",
    "pytest-cov>=7.1.0",
]

[tool.mypy]
exclude = ["build/"]

[tool.black]
target-version = ["py313"]
